--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <title>Hello World!</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
 <h1>Hello world!</h1>
-<div><img src="OIP.jfif" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
+<div><img src="OIP.jfif" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
 <div><img src="OIP.jfif" alt="Hello Git" style="width:100%;max-width:640px"></div>
